--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,18 +1,23 @@
-aiofiles==0.7.0
-certifi==2021.5.30
-charset-normalizer==2.0.4
-click==7.1.1
-fastapi==0.54.1
-gunicorn==20.0.4
-h11==0.9.0
-httptools==0.1.1
-idna==3.2
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-pydantic==1.5.1
-requests==2.26.0
-starlette==0.13.2
-urllib3==1.26.6
-uvicorn==0.11.3
-uvloop==0.14.0
-websockets==8.1
+anyio==3.7.0
+certifi==2023.5.7
+charset-normalizer==2.0.12
+click==8.1.3
+fastapi==0.95.2
+gunicorn==20.1.0
+h11==0.14.0
+httptools==0.5.0
+idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+pydantic==1.10.8
+python-dotenv==1.0.0
+PyYAML==6.0
+requests==2.31.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.6.2
+urllib3==1.26.16
+uvicorn==0.20.0
+uvloop==0.17.0
+watchfiles==0.19.0
+websockets==11.0.3
